--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,15 @@
-body, html{
-	height:100%;
-	font-family: "Georgia", "Times New Roman", serif;
+html {
+	min-height:100%;
+	position: relative;
+	
 }
+
+body {
+	font-family: "Georgia", "Times New Roman", serif;
+	margin-bottom: 8.5em;
+}
+
+
 .panel .panel-heading {
 	text-align:left;
 	background-color: black;
@@ -34,4 +42,28 @@ hr {
 
 .headline:hover, .headline:visited {
 	color: black;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	margin-top: 0.5em;
+	padding-top: 0.5em;
+	width: 100%;
+	/* Set the fixed height of the footer here */
+	height: 6em;
+	background-color: black;
+	border-top-style: solid;
+	color: white;
+}
+
+.footer a:link {
+    text-decoration: none;
+    color: white;
+    font-size: 2em;
+}
+
+.footer a:visited {
+    text-decoration: none;
+    color: white;
 }
